[tool.poetry]
name = "system-admin-homework-template"
version = "0.1.0"
description = "A simple CRUD web template for system admin homework"
authors = ["arashi87 <arasi27676271@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.21.0"
fastapi = "0.85.0"
uvicorn = {version = "0.18.3", extras = ["standard"]}
loguru = "0.6.0"
python-multipart = "0.0.6"

[tool.poetry.dev-dependencies]
pre-commit = "2.20.0"
black = "22.8.0"
isort = "5.10.1"
flake8 = "5.0.4"
pytest = "7.1.3"
pytest-asyncio = "0.20.3"
requests = "2.28.1"
httpx = "0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
